--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,5 +54,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="로그인" />
+    <Button
+        android:id="@+id/signUpBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="회원가입" />
 
 </LinearLayout>
