--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -2,53 +2,61 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="15dp"
     tools:context=".SignUpActivity">
+
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="이메일" />
+
+    <EditText
         android:id="@+id/emailEdt"
-        android:text="이메일주소"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:hint="이메일 주소 입력"/>
+        android:hint="이메일 양식으로 입력"
+        android:inputType="textEmailAddress"/>
+
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="비밀번호"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_marginTop="10dp"/>
+
     <EditText
-        android:id="@+id/inputPassword"
+        android:id="@+id/passwordEdt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:hint="패스워드를 입력해주세요(8글자 이상"/>
+        android:hint="비밀번호 입력 (8글자 이상)"
+        android:inputType="textPassword" />
+
     <TextView
         android:id="@+id/passwordCheckResultTxt"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="비밀번호 재입력"
-    />
+        android:text="비밀번호를 입력해 주세요." />
+
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="닉네임"
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_marginTop="20dp"/>
+
     <EditText
-        android:id="@+id/inputNickname"
+        android:id="@+id/nickNameEdt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:singleLine="true"
-        android:hint="사용할 닉네임 입력"/>
+        android:hint="사용할 닉네임 입력"
+        android:singleLine="true"/>
+
     <Button
         android:id="@+id/okBtn"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="25dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="가입하기" />
+        android:text="가입 하기" />
 
 </LinearLayout>
