--- a/app/src/main/res/layout/topic_list_item.xml
+++ b/app/src/main/res/layout/topic_list_item.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:padding="15dp"
         android:gravity="center_vertical"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
