--- a/app/src/main/res/layout/topic_list_item.xml
+++ b/app/src/main/res/layout/topic_list_item.xml
@@ -12,10 +12,12 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/topicImg"
             android:src="@mipmap/ic_launcher"
             android:layout_width="80dp"
             android:layout_height="80dp" />
         <TextView
+            android:id="@+id/topicTitleTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
