--- a/app/src/main/res/layout/activity_view_topic_detail.xml
+++ b/app/src/main/res/layout/activity_view_topic_detail.xml
@@ -7,4 +7,30 @@
     android:orientation="vertical"
     tools:context=".ViewTopicDetailActivity">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:layout_gravity="center">
+
+        <ImageView
+            android:id="@+id/topicImg"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:layout_gravity="center" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#AA000000"
+            />
+
+        <TextView
+            android:id="@+id/topicTitleTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="#ffffff"
+            android:text="토론 주제가 나올 자리"
+            android:textSize="20sp" />
+    </FrameLayout>
 </LinearLayout>
