--- a/app/src/main/res/layout/activity_view_topic_detail.xml
+++ b/app/src/main/res/layout/activity_view_topic_detail.xml
@@ -47,6 +47,7 @@
                 android:layout_height="match_parent">
 
                 <TextView
+                    android:id="@+id/firstSideTitleTxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="두산베어스"
@@ -54,6 +55,7 @@
                     android:textSize="16sp" />
 
                 <TextView
+                    android:id="@+id/firstSideVoteCountTxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -75,6 +77,7 @@
                 android:layout_height="match_parent">
 
                 <TextView
+                    android:id="@+id/secondSideTitleTxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="두산베어스"
@@ -82,6 +85,7 @@
                     android:textSize="16sp" />
 
                 <TextView
+                    android:id="@+id/secondSideVoteCountTxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
