--- a/app/src/main/res/layout/reply_list_item.xml
+++ b/app/src/main/res/layout/reply_list_item.xml
@@ -12,6 +12,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/writerTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="작성자 닉네임"
@@ -19,6 +20,7 @@
             android:textSize="16sp" />
 
         <TextView
+            android:id="@+id/selectedSideTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
@@ -31,6 +33,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
+            android:id="@+id/opinionTxt"
             android:layout_marginLeft="10dp"
             android:textColor="#333333"
             android:textSize="15sp"
