--- a/app/src/main/res/layout/reply_list_item.xml
+++ b/app/src/main/res/layout/reply_list_item.xml
@@ -12,7 +12,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/writerTxt"
+            android:id="@+id/writerNickNameTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="작성자 닉네임"
@@ -20,7 +20,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/selectedSideTxt"
+            android:id="@+id/selectedSideTitleTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
-            android:id="@+id/opinionTxt"
+            android:id="@+id/contentTxt"
             android:layout_marginLeft="10dp"
             android:textColor="#333333"
             android:textSize="15sp"
