--- a/app/src/main/res/layout/activity_edit_reply.xml
+++ b/app/src/main/res/layout/activity_edit_reply.xml
@@ -19,6 +19,7 @@
             android:text="토론주제" />
 
         <TextView
+            android:id="@+id/topicTitleTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
@@ -44,6 +45,7 @@
             android:text="선택한 진영" />
 
         <TextView
+            android:id="@+id/mysideTitleTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
@@ -69,6 +71,7 @@
             android:text="의견내용입력" />
 
         <EditText
+            android:id="@+id/contentEdt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="해당 진영에 대한 옹호 의견을 적어주세요."
