--- a/app/src/main/res/layout/reply_list_item.xml
+++ b/app/src/main/res/layout/reply_list_item.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="10dp"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:padding="10dp"
         android:orientation="horizontal">
 
         <TextView
@@ -34,7 +34,6 @@
         android:orientation="horizontal">
         <TextView
             android:id="@+id/contentTxt"
-            android:layout_marginLeft="10dp"
             android:textColor="#333333"
             android:textSize="15sp"
             android:layout_marginTop="10dp"
@@ -43,5 +42,12 @@
             android:layout_height="wrap_content"/>
 
     </LinearLayout>
+    <TextView
+        android:id="@+id/replayWriteTimeTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:textSize="13sp"
+        android:text="의견 작성 시간 "/>
 
 </LinearLayout>
