--- a/app/src/main/res/layout/reply_list_item.xml
+++ b/app/src/main/res/layout/reply_list_item.xml
@@ -55,7 +55,7 @@
         android:orientation="horizontal"
         android:layout_marginTop="5dp">
         <Button
-            android:id="@+id/rereplyCountBtn"
+            android:id="@+id/replyBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:focusable="false"
@@ -65,13 +65,13 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
         <Button
-            android:id="@+id/likeCountBtn"
+            android:id="@+id/likeBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:focusable="false"
             android:text="좋아요~"/>
         <Button
-            android:id="@+id/hateCountBtn"
+            android:id="@+id/dislikeBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:focusable="false"
