--- a/app/src/main/res/layout/activity_view_reply_detail.xml
+++ b/app/src/main/res/layout/activity_view_reply_detail.xml
@@ -34,6 +34,7 @@
             android:layout_weight="1" />
 
         <TextView
+            android:id="@+id/writtenDateTimeTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="작성일시" />
@@ -46,6 +47,15 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:text="의견내용자리"
+        android:textColor="#000000"
+        android:textSize="18sp" />
+    <TextView
+        android:id="@+id/replyContentTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:text="댓글"
         android:textColor="#000000"
         android:textSize="18sp" />
 
