--- a/app/src/main/res/layout/reply_list_item.xml
+++ b/app/src/main/res/layout/reply_list_item.xml
@@ -26,6 +26,13 @@
             android:layout_marginLeft="5dp"
             android:text="(선택한 진영)"
             android:textSize="13sp" />
+        <TextView
+            android:id="@+id/writtenTitleTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:text="작성시간)"
+            android:textSize="13sp" />
     </LinearLayout>
 
     <LinearLayout
