--- a/app/src/main/res/layout/re_reply_list_view_item.xml
+++ b/app/src/main/res/layout/re_reply_list_view_item.xml
@@ -42,10 +42,20 @@
             android:text="의견 작성 시간"
             android:textSize="13sp" />
 
-
     </LinearLayout>
-    <EditText
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="댓글을 입력하세요."/>
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/contentTxt"
+            android:textColor="#333333"
+            android:textSize="15sp"
+            android:layout_marginTop="10dp"
+            android:text="의견 내용 자리"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
 </LinearLayout>
