좋아요 싫어요 버튼 수정.누를때마다 둘다 동시에 숫자 변경되도록

--- a/app/src/main/res/layout/activity_view_reply_detail.xml
+++ b/app/src/main/res/layout/activity_view_reply_detail.xml
@@ -10,23 +10,25 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
+        android:padding="10dp"
         android:orientation="horizontal"
-        android:padding="10dp">
+        android:gravity="center_vertical">
 
         <TextView
+            android:id="@+id/writerNickNameTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="작성자 닉네임"
+            android:textSize="16sp"
             android:textColor="#000000"
-            android:textSize="16sp" />
+            android:text="작성자 닉네임" />
 
         <TextView
+            android:id="@+id/selectedSideTitleTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
+            android:textSize="13sp"
             android:text="(선택한 진영)"
-            android:textSize="13sp" />
+            android:layout_marginLeft="5dp" />
 
         <TextView
             android:layout_width="0dp"
@@ -37,33 +39,25 @@
             android:id="@+id/writtenDateTimeTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="작성일시" />
+            android:text="작성 일시" />
 
     </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:text="의견내용자리"
-        android:textColor="#000000"
-        android:textSize="18sp" />
     <TextView
         android:id="@+id/replyContentTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:text="댓글"
-        android:textColor="#000000"
-        android:textSize="18sp" />
+        android:text="의견 내용 자리"
+        android:textSize="18sp"
+        android:textColor="#000000"/>
 
     <ListView
         android:id="@+id/reReplyListView"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="10dp"
         android:layout_weight="1" />
 
     <LinearLayout
@@ -72,15 +66,17 @@
         android:orientation="horizontal">
 
         <EditText
-            android:hint="답글을 입력하세요"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:hint="답글을 입력하세요."
+            android:singleLine="true" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="답글 등록" />
+
     </LinearLayout>
+
 </LinearLayout>
