--- a/app/src/main/res/layout/reply_list_item.xml
+++ b/app/src/main/res/layout/reply_list_item.xml
@@ -70,6 +70,7 @@
                 android:layout_height="wrap_content"
                 android:focusable="false"
                 android:background="@drawable/gray_border_box"
+                android:textColor="@color/black"
                 android:text="답글 ~" />
 
             <TextView
@@ -82,13 +83,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:focusable="false"
+                android:background="@drawable/gray_border_box"
+                android:textColor="@color/textGray"
+                android:layout_marginRight="5dp"
                 android:text="좋아요 ~" />
 
             <Button
                 android:id="@+id/dislikeBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/textGray"
                 android:focusable="false"
+                android:background="@drawable/gray_border_box"
                 android:text="싫어요 ~" />
 
         </LinearLayout>
