--- a/app/src/main/res/drawable/blue_border_box.xml
+++ b/app/src/main/res/drawable/blue_border_box.xml
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
+    <item android:state_pressed="false" >
         <layer-list>
             <item>
                 <shape android:shape="rectangle">
-                    <solid/>
+                    <solid android:color="@color/blue"/>
+                </shape>
+            </item>
+            <item android:bottom="1dp" android:left="1dp" android:right="1dp" android:top="1dp">
+                <shape android:shape="rectangle">
+                    <solid android:color="@color/white"/>
                 </shape>
             </item>
         </layer-list>
     </item>
-    <item android:state_pressed="false">
+    <item android:state_pressed="true">
         <layer-list>
             <item>
                 <shape android:shape="rectangle">
-                    <solid/>
+                    <solid android:color="@color/blue"/>
+                </shape>
+            </item>
+            <item android:bottom="1dp" android:left="1dp" android:right="1dp" android:top="1dp">
+                <shape android:shape="rectangle">
+                    <solid android:color="@color/lightGray"/>
                 </shape>
             </item>
         </layer-list>
