--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="textGray">#999999</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
+    <color name="red">#FF5151</color>
+    <color name="blue">#385DA3</color>
+    <color name="lightGray">#EFEFEF</color>
+
 </resources>
