--- a/app/src/main/res/layout/activity_view_reply_detail.xml
+++ b/app/src/main/res/layout/activity_view_reply_detail.xml
@@ -66,7 +66,7 @@
         android:orientation="horizontal">
 
         <EditText
-            android:id="@+id/replyTxt"
+            android:id="@+id/contentEdt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -74,7 +74,7 @@
             android:singleLine="true" />
 
         <Button
-            android:id="@+id/replyBtn"
+            android:id="@+id/postReReplyBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="답글 등록" />
