--- a/app/src/main/res/layout/reply_list_item.xml
+++ b/app/src/main/res/layout/reply_list_item.xml
@@ -65,12 +65,12 @@
             android:layout_marginTop="5dp">
 
             <Button
-                android:id="@+id/postRereplyBtn"
+                android:id="@+id/replyBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:focusable="false"
-                android:background="@drawable/gray_border_box"
                 android:textColor="@color/black"
+                android:background="@drawable/gray_border_box"
                 android:text="답글 ~" />
 
             <TextView
@@ -82,19 +82,19 @@
                 android:id="@+id/likeBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:focusable="false"
-                android:background="@drawable/gray_border_box"
                 android:textColor="@color/textGray"
                 android:layout_marginRight="5dp"
+                android:background="@drawable/gray_border_box"
+                android:focusable="false"
                 android:text="좋아요 ~" />
 
             <Button
                 android:id="@+id/dislikeBtn"
                 android:layout_width="wrap_content"
+                android:background="@drawable/gray_border_box"
                 android:layout_height="wrap_content"
                 android:textColor="@color/textGray"
                 android:focusable="false"
-                android:background="@drawable/gray_border_box"
                 android:text="싫어요 ~" />
 
         </LinearLayout>
