--- a/app/src/main/res/layout/re_reply_list_item.xml
+++ b/app/src/main/res/layout/re_reply_list_item.xml
@@ -78,6 +78,7 @@
 
             <Button
                 android:id="@+id/likeBtn"
+                android:tag="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:focusable="false"
@@ -85,6 +86,7 @@
 
             <Button
                 android:id="@+id/dislikeBtn"
+                android:tag="false"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:focusable="false"
