--- a/app/src/main/res/layout/custom_action_bar.xml
+++ b/app/src/main/res/layout/custom_action_bar.xml
@@ -13,4 +13,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+    <ImageView
+        android:visibility="gone"
+        android:id="@+id/notificationBtn"
+        android:scaleType="centerCrop"
+        android:padding="5dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/notiicon"
+        android:layout_gravity="right|center_vertical"
+        android:layout_marginRight="10dp"/>
 </FrameLayout>
