--- a/app/src/main/res/layout/notification_list_item.xml
+++ b/app/src/main/res/layout/notification_list_item.xml
@@ -11,6 +11,7 @@
         android:padding="10dp">
 
         <TextView
+            android:id="@+id/notiTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="~님이 회원님의 ~에 했습니다."
@@ -18,6 +19,7 @@
             android:textSize="17sp" />
 
         <TextView
+            android:id="@+id/notiCreatedAtTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
