알림표시용 텍스트뷰 추가

--- a/app/src/main/res/layout/custom_action_bar.xml
+++ b/app/src/main/res/layout/custom_action_bar.xml
@@ -2,6 +2,7 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="60dp"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/black">
 
     <TextView
@@ -13,14 +14,38 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <ImageView
-        android:visibility="gone"
-        android:id="@+id/notificationBtn"
-        android:scaleType="centerCrop"
-        android:padding="5dp"
+    <FrameLayout
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:src="@drawable/notiicon"
         android:layout_gravity="right|center_vertical"
-        android:layout_marginRight="10dp"/>
+        android:layout_marginRight="5dp">
+
+        <ImageView
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:id="@+id/notificationBtn"
+            android:scaleType="centerCrop"
+            android:padding="5dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+
+            android:src="@drawable/notiicon"
+            />
+        <TextView
+            android:id="@+id/notiCountTxt"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:gravity="center"
+            android:text="2"
+            android:background="@drawable/oval"
+            android:layout_gravity="right"
+            android:textColor="@color/white"
+            android:layout_marginRight="3dp"
+            android:layout_marginTop="3dp"
+            android:textSize="10sp"
+            />
+    </FrameLayout>
+
 </FrameLayout>
